# NBK

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/nbk/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: kit.c  kit.h  native-lib.c
app/src/main/java/com/nbk/: JniUtil.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/nbk/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
